[workspace]
resolver = "3"
members = [
    "cli",
    "utp-socket",
    "bittorrent",
    "dht"
]

[workspace.dependencies]
bytes = "1.10"
anyhow = "1.0"
ahash = "0.8"
log = "0.4"
parking_lot = "0.12"
rand = "0.9"
env_logger = "0.11"
lava_torrent = "0.11"
thiserror = "2"
sha1 = "0.10"
heapless = "0.8"
metrics-exporter-prometheus = "0.17"

[profile.release]
overflow-checks = true
# debug = true 
lto = true

[profile.release.package."*"]
opt-level = 3
