[package]
name = "vortex-bittorrent"
version = "0.1.0"
edition = "2021"
description = "An implementation of the bittorrent protocol built on top of io-uring"
homepage = "https://github.com/Nehliin/vortex"
repository = "https://github.com/Nehliin/vortex"
license = "BSD-3-Clause"

[dependencies]
io-uring = "0.7"
libc = "0.2"
slab = "0.4"
bytes = { workspace = true }
bitvec = { version = "1.0", default-features = false, features = ["alloc"]}
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
log = { workspace = true }
socket2 = "0.5"
rand = { workspace = true }
lava_torrent = { workspace = true } 
thiserror = { workspace = true }
sha1 = { workspace = true }

[features]
fuzzing = ["dep:arbitrary"]

[dev-dependencies]
env_logger = { workspace = true }
