[package]
name = "vortex-bittorrent"
version = "0.2.0"
edition = "2024"
authors = ["Nehliin"]
description = "An implementation of the bittorrent protocol built on top of io-uring"
homepage = "https://github.com/Nehliin/vortex"
repository = "https://github.com/Nehliin/vortex"
license = "BSD-3-Clause"

[dependencies]
io-uring = "0.7"
libc = "0.2"
slab = "0.4"
bytes = { workspace = true }
bitvec = { version = "1.0", default-features = false, features = ["alloc"]}
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
log = { workspace = true }
socket2 = "0.5"
rand = { workspace = true }
lava_torrent = { workspace = true } 
thiserror = { workspace = true }
sha1 = { workspace = true }
smallvec= { version = "2.0.0-alpha.10" , features = ["std"]}
rayon = "1"
metrics = "0.24"

[features]
fuzzing = ["dep:arbitrary"]

[dev-dependencies]
metrics-exporter-prometheus = "0.17"
metrics-util = "0.19"
env_logger = { workspace = true }
