[package]
name = "vortex-cli"
version = "0.1.0"
authors = ["Nehliin"]
edition = "2024"
description = "A cli for downloading torrents using the bittorrent protocol(s). Built on top of io-uring"
homepage = "https://github.com/Nehliin/vortex"
repository = "https://github.com/Nehliin/vortex"
license = "BSD-3-Clause"

[dependencies]
anyhow = { workspace = true }
lava_torrent = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
vortex-bittorrent = { path = "../bittorrent", version = "0.2", features = ["metrics"] }
heapless = { workspace = true }
tikv-jemallocator = "0.6"
mainline = { version = "6", default-features = false, features = ["node"]}
metrics-exporter-prometheus = { workspace = true }
clap = { version = "4.5.39", features = ["derive"] }
crossbeam-channel = "0.5.15"
ratatui = "0.30.0"
human_bytes = "0.4.3"
humantime = "2.2"
throbber-widgets-tui = "0.10.0"

