[package]
name = "vortex-cli"
version = "0.4.0"
authors = ["Nehliin"]
edition = "2024"
description = "A cli for downloading torrents using the bittorrent protocol(s). Built on top of io-uring"
homepage = "https://github.com/Nehliin/vortex"
repository = "https://github.com/Nehliin/vortex"
license = "BSD-3-Clause"

[dependencies]
anyhow = { workspace = true }
lava_torrent = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
vortex-bittorrent = { path = "../bittorrent", version = "0.6" }
heapless = { workspace = true }
mimalloc = { version = "0.1.48", features = ["v3"] }
mainline = { version = "6", default-features = false, features = ["node"]}
metrics-exporter-prometheus = { workspace = true, optional = true }
clap = { version = "4.6.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
ratatui = "0.30.0"
human_bytes = "0.4.3"
humantime = "2.3"
toml = "1.0"
dirs = "6.0"
color-eyre = { version = "0.6.5", default-features = false }
serde = { version = "1", features = ["derive"] }
hex = "0.4"
data-encoding = "2.10"

[features]
default = []
metrics = ["vortex-bittorrent/metrics", "dep:metrics-exporter-prometheus"]
