[package]
name = "vortex"
version = "0.1.0"
authors = ["Oskar Nehlin"]
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
tokio-uring = { workspace = true }
anyhow = { workspace = true }
# Focus is not on this encoding
ahash = "0.8"
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "macros"] }
log = { workspace = true }
env_logger = { workspace = true }
bittorrent = { path = "../bittorrent" }
dht = { path = "../dht" }
bip_metainfo = "0.12"
indicatif = "0.17.3"
futures = "0.3"

[dev-dependencies]
num-bigint = "0.4.3"
