[package]
name = "dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring", branch = "master", features = ["bytes"]}
anyhow = "1.0"
# Focus is not on this encoding
serde_bencoded = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
magnet-url = "2.0"
ahash = "0.8"
rand = "0.8.5"
time = { version = "0.3", features = ["serde", "local-offset"]}
bytes = { version = "1.2", features = ["serde"]}
tokio = { version = "1.20.1", features = ["time", "sync", "macros"] }
sha1 = "0.10.1"
log = "0.4"
slotmap = { version = "1.0.6", features = ["serde"]}
indicatif = "0.17.2"
futures = "0.3"

[dev-dependencies]
num-bigint = "0.4.3"
env_logger = "0.9"
