[package]
name = "dht"
version = "0.1.0"
authors = ["Oskar Nehlin"]
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
tokio-uring = { workspace = true }
anyhow = { workspace = true }
# Focus is not on this encoding
serde_bencoded = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "1.0"
ahash = "0.8"
rand = { workspace = true }
time = { version = "0.3", features = ["serde", "local-offset"]}
bytes = { workspace = true, features = ["serde"]}
tokio = { workspace = true, features = ["sync"] }
sha1 = "0.10.1"
log = { workspace = true }
slotmap = { version = "1.0.6", features = ["serde"]}
futures = "0.3"

[dev-dependencies]
num-bigint = "0.4.3"
env_logger = { workspace = true }
