[package]
name = "vortex-dht"
version = "0.1.1"
authors = ["Nehliin"]
edition = "2024"
description = "An implementation of Bittorrents distributed hash table built on top of io-uring"
homepage = "https://github.com/Nehliin/vortex"
repository = "https://github.com/Nehliin/vortex"
license = "BSD-3-Clause"

[dependencies]
tokio-uring = { workspace = true }
anyhow = { workspace = true }
# Focus is not on this encoding
serde_bencoded = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = { workspace = true }
ahash = { workspace = true }
rand = { workspace = true }
time = { version = "0.3", features = ["serde", "local-offset"]}
bytes = { workspace = true, features = ["serde"]}
tokio = { workspace = true, features = ["time", "sync"] }
sha1 = { workspace = true }
log = { workspace = true }
slotmap = { version = "1.0.6", features = ["serde"]}
futures = "0.3"

[dev-dependencies]
num-bigint = "0.4.3"
env_logger = { workspace = true }
