[package]
name = "utp-socket"
version = "0.1.0"
authors = ["Oskar Nehlin"]
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
tokio-uring = { workspace = true, branch = "master", features = ["bytes"]}
tokio = { workspace = true, features = ["time", "sync", "macros"] }
log = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio-stream = "0.1.10"
env_logger = { workspace = true }
