[package]
name = "utp-socket"
version = "0.1.1"
authors = ["Nehliin"]
edition = "2024"
description = "Socket used for uTP communication with io-uring support"
homepage = "https://github.com/Nehliin/vortex"
repository = "https://github.com/Nehliin/vortex"
license = "BSD-3-Clause"

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
tokio-uring = { workspace = true, features = ["bytes"]}
tokio = { workspace = true, features = ["time", "sync", "macros"] }
log = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio-stream = "0.1.10"
env_logger = { workspace = true }
